Scripts/Terraform/nat.tf
resource "aws_eip" "nat" { }

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.ecliptix_public_1a.id
  tags          = { Name = "ecliptix-nat-gateway" }
}
